opam-version: "1.2"
name: "pocket-mesh-signal-server"
version: "0.4.0"
maintainer: "Jan Hrdina <jan.hrdka@gmail.com>"
authors: [
  "Jan Hrdina <jan.hrdka@gmail.com>"
]
license: "BSD"
homepage: "https://github.com/jhrdina/pocket-mesh-signal-server"
doc: "https://jhrdina.github.io/pocket-mesh-signal-server/"
bug-reports: "https://github.com/jhrdina/pocket-mesh-signal-server/issues"
dev-repo: "git://github.com/jhrdina/pocket-mesh-signal-server.git"
tags: [ "reason" "example" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "nocrypto" {>= "0.5.4"}
  "ocaml-diff" {>= "0.1.2"}
  "re"
  "reason"  {>= "3.2.0"}
  "websocket-lwt"
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.07" ]
