opam-version: "1.2"
name: "pocket-mesh-signal-server"
description: "Signal server for Pocket Mesh project"
version: "0.8.4"
maintainer: "Jan Hrdina <jan.hrdka@gmail.com>"
authors: [
  "Jan Hrdina <jan.hrdka@gmail.com>"
]
license: "AGPL-3.0-or-later"
homepage: "https://github.com/jhrdina/pocket-mesh-signal-server"
doc: "https://jhrdina.github.io/pocket-mesh-signal-server/"
bug-reports: "https://github.com/jhrdina/pocket-mesh-signal-server/issues"
dev-repo: "git://github.com/jhrdina/pocket-mesh-signal-server.git"
tags: [ "reason" "example" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.6.0"}
  "nocrypto" {>= "0.5.4"}
  "stdlib-diff" {>= "0.1.3"}
  "re"
  "reason"  {>= "3.4.0"}
  "websocket-lwt-unix" {= "2.13"}
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.07" ]
